--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "mobx": "^6.13.6",
     "mobx-react-lite": "^4.1.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router": "^7.2.0",
+    "react-router-dom": "^7.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
