--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mobx-react-lite": "^4.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-router": "^7.2.0",
     "react-router-dom": "^7.2.0"
   },
